ShapeDetection: Get bounding box in the line of Text on Windows 10

The OcrLine[1] has no BoundingRect properties, so the result of bounding box
need to be calculated by the words in the current line of text.

[1] https://docs.microsoft.com/en-us/uwp/api/windows.media.ocr.ocrline

BUG=866019

Cq-Include-Trybots: luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win10_chromium_x64_rel_ng
Change-Id: I7bcbd527b55b685f03a8c1783ca8c7bf7b090ee2
Reviewed-on: https://chromium-review.googlesource.com/1156054
Commit-Queue: Junwei Fu <junwei.fu@intel.com>
Reviewed-by: Miguel Casas <mcasas@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581499}
Former-commit-id: ecf2d44818648b5345b8bc02e2c33c46398667ec