services/shape_detection/text_detection_impl_win_unittest.cc
@@ -89,7 +89,9 @@ TEST_F(TextDetectionImplWinTest, ScanOnce) {
   run_loop.Run();
   ASSERT_EQ(2u, results.size());
   EXPECT_EQ("The Chromium Project website is:", results[0]->raw_value);
+  EXPECT_EQ(gfx::RectF(51, 38, 272, 17), results[0]->bounding_box);
   EXPECT_EQ("https://www.chromium.org", results[1]->raw_value);
+  EXPECT_EQ(gfx::RectF(51, 63, 209, 17), results[1]->bounding_box);
 }
 
 }  // namespace shape_detection
